locale bug with layout horizontal scrolling

--- a/src/app/layout/community/components/dmo-editor-readonly/dmo-editor-readonly.component.scss
+++ b/src/app/layout/community/components/dmo-editor-readonly/dmo-editor-readonly.component.scss
@@ -16,10 +16,10 @@
         justify-content: flex-start;
         align-items: center;
         background: white;
-        margin-left: -14px;
+        margin-left: -13px;
         margin-right: calc(-1rem - 1px);
         padding-right: calc(1rem + 1px);
-        padding-left: 14px;
+        padding-left: 13px;
         box-shadow: 0 0 1em rgba(0, 0, 0, .1);
         height: 43px;
 
